<resources>

    <string name="app_name">TDDM</string>

    <!-- Activities title -->

    <string name="title_activity_main">Main activity</string>
    <string name="title_geoposition">Geoposition</string>
    <string name="title_sensor">Sensors</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_configuration">Configuration</string>
    <string name="title_location_provider">Location provider</string>
    <string name="title_power_criteria">Power criteria</string>
    <string name="title_accuracy_criteria">Accuracy criteria</string>
    <string name="title_latitude">Latitude</string>
    <string name="title_longitude">Longitude</string>
    <string name="title_accuracy">Accuracy</string>
    <string name="title_speed">Speed</string>
    <string name="title_bearing">Bearing</string>
    <string name="title_altitude">Altitude</string>
    <string name="title_config_location_mode">Location provider mode</string>
    <string name="title_by_location_provider">By location provider</string>
    <string name="title_by_criteria">By criteria</string>
    <string name="title">Title</string>
    <string name="title_accelerometer">Accelerometer</string>
    <string name="title_gravity">Gravity</string>
    <string name="title_gyroscope">Gyroscope</string>
    <string name="title_light">Light</string>
    <string name="title_linear_acceleration">Linear acceleration</string>
    <string name="title_magnetic_field">Magnetic field</string>
    <string name="title_orientation">Orientation</string>
    <string name="title_proximity">Proximity</string>
    <string name="title_rotation_vector">Rotation vector</string>
    <string name="title_ambient_temperature">Ambient temperature</string>
    <string name="title_pressure">Pressure</string>
    <string name="title_relative_humidity">Relative humidity</string>
    <string name="title_inner_temperature">Inner temperature</string>
    <string name="title_video">Video</string>

    <!-- Navigation drawer -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Action strings -->

    <string name="action_settings">Settings</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_sensors">Sensors</string>
    <string name="action_video">Video</string>
    <string name="action_geoposition">Geoposition</string>

    <!-- Labels -->

    <string name="power_high">Power high</string>
    <string name="power_medium">Power medium</string>
    <string name="power_low">Power low</string>
    <string name="accuracy_coarse">Accuracy coarse</string>
    <string name="accuracy_low">Accuracy low</string>
    <string name="accuracy_medium">Accuracy medium</string>
    <string name="accuracy_high">Accuracy high</string>
    <string name="accuracy_fine">Accuracy fine</string>
    <string name="unsuported">Unsuported</string>

    <!-- Messages -->

    <string name="msg_location_provider_not_selected">Location provider not selected</string>
    <string name="msg_error_location_provider">Error loading location provider</string>
    <string name="msg_starting_geoposition">Starting geoposition</string>
    <string name="msg_provider_enabled">%s provider enabled</string>
    <string name="msg_provider_disabled">%s provider disabled</string>
    <string name="msg_check_configuration">Check the configuration</string>
    <string name="msg_no_location_found_by_criteria">No provider found with this criteria</string>

    <!-- Others -->

    <string name="format_time_date">MM/dd/yyyy @ HH:mm:ss</string>
    <string name="no_data">No data yet…</string>
    <string name="msg_starting_with_provider">Starting with %s provider</string>
    <string name="msg_check_permissions">Check permissions</string>
    <string name="stopping">Stopping</string>
    <string name="not_implemented">Not implemented</string>
    <string name="value_x">X</string>
    <string name="question_mark">\?</string>
    <string name="value_z">Z</string>
    <string name="value_y">Y</string>
    <string name="sensor_not_available">Sensor not available</string>
    <string name="unknown_error">Unknown error</string>
    <string name="value">Value</string>
    <string name="action_download_video">Download video</string>
    <string name="msg_no_storage_permission">No storage permission</string>
    <string name="msg_download_video">Download video</string>
    <string name="msg_downloading_video">Downloading video…</string>
    <string name="msg_downloaded_video">Video downloaded!</string>
    <string name="msg_video_ready">Video ready!</string>
    <string name="description_geoposition_icon">Geoposition icon</string>
    <string name="description_video_icon">Video icon</string>
    <string name="description_sensor_icon">Sensor icon</string>

</resources>
