<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_geolocation"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/action_geoposition" />
        <item
            android:id="@+id/nav_sensor"
            android:icon="@drawable/ic_visibility_black_24dp"
            android:title="@string/action_sensors" />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_videocam_black_24dp"
            android:title="@string/action_video" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/action_notifications" />
    </group>
</menu>
